fix layout right + img

--- a/bai2.html
+++ b/bai2.html
@@ -2,20 +2,21 @@
 <html>
 <head>
 <title>Bai2</title>
+
 </head>
 <body>
 <table width="100%" border="0">
   <tr valign="top">
     <td bgcolor="#aaa" width="20%">
-      The Walk<br />
-      Transport<br />
-      History<br />
-	  Gallery<br />
+      The Walk <br />
+      Transport <br />
+      History <br />
+	  Gallery <br />
     </td>
-    <td bgcolor="#b5dcb3" height="200" width="60%">
+    <td bgcolor="#f9f8f2" height="200" width="60%">
         <h1>The Walk</h1>
 		<p>The walk from Monterosso to Riomaggiore will take you approximately two hours. give or take an hour depending on the weather conditions and your physial shape</p>
-		<img src = "ThiThucHanh\images\PC2.gif">
+		<img src ="images\PC2.gif" style="width:100%">
     </td>
     <td bgcolor="#b5dcb3" width="20%">
       <b>What ?</b><br />
