--- a/bai2.html
+++ b/bai2.html
@@ -7,7 +7,7 @@
 <body>
 <table width="100%" border="0">
   <tr valign="top">
-    <td bgcolor="#aaa" width="20%">
+    <td bgcolor="#f9f8f2" width="20%">
       The Walk <br />
       Transport <br />
       History <br />
@@ -18,7 +18,7 @@
 		<p>The walk from Monterosso to Riomaggiore will take you approximately two hours. give or take an hour depending on the weather conditions and your physial shape</p>
 		<img src ="images\PC2.gif" style="width:100%">
     </td>
-    <td bgcolor="#b5dcb3" width="20%">
+    <td bgcolor="#75eaea" width="20%">
       <b>What ?</b><br />
 	  <p>Cinqye Terre comprises five villages: Monterosso,Vernazza,Corniglia,Manarola, and Riomaggiore</p><br />
 	  <b>Where ?</b><br />
